# vervana-cultivate-replit

./: config.py  main.py  models.py  passwords.txt  pasted_text_1725705770114.txt  pyproject.toml  test_utils.py  utils.py
instance/: plant_cultivation.db  your_database.db
migrations/versions/: 3b3250e2a60b_initial_migration.py  8fabd2646341_add_cultivationschedule_and_.py  d7e54bf8970b_update_models_to_latest_version.py  f4d03892ce7b_add_plantmaintenancetask_model.py
static/css/: styles.css
static/js/: chatbot.js  dashboard.js  image_analysis.js  yield_prediction.js
templates/: base.html  batch_data.html  dashboard.html
